# ai-chatbot

./: .env.example  CLAUDE.md  README.md  TODO.md  docker-compose.yml  sample.webm
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/routers/: chat.py
backend/app/schemas/: __init__.py  chat.py
backend/app/services/: __init__.py  claude_service.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Avatar.tsx  ChatContainer.tsx  ChatInput.tsx  ImageUploadButton.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageList.tsx  VoiceInputButton.tsx
frontend/src/hooks/: useChat.ts  useLocalStorage.ts  useSpeechRecognition.ts
frontend/src/lib/: api.ts
frontend/src/types/: chat.ts
